--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
 
   "rules": {
     "no-unused-vars": "error",
-    "no-console": "warn",
+    "no-console": "off",
     // "no-undefined": "error",
     "no-unused-expressions": "error",
     "no-unreachable": "error",
